14-09 2nd design changes

--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -177,7 +177,7 @@
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
                             <h3 class="number text-white text-center"><a></a><a></a></h3>
-                            <div class="inner_box_content">
+                            <div class="inner_box_content collection-5th-slide-scroll">
                                 <div class="scrollbar-rail scroll_content">
                                     <div class="five_border">
                                         <div class="inner_title">
