--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="event_detail_slide event_detail_slide_sky1">
                                 <div class="events_name text-center">
-                                    <a (click)="nextSection('step_four', 'step_five')" class="text-center text-white"
+                                    <a  class="text-center text-white"
                                         data-toggle="tooltip" title="Gift Donation">Gift Donation</a>
                                 </div>
                             </div>
