--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="radio_btn text-white">
-                            <p class="event_name_new">{{eventDetails.eventType}}</p>
+                            <p class="event_name_new"  *ngIf="eventDetails">{{eventDetails.eventType}}</p>
                             <div class="event_prise_detail">
                                 <p class="gender_select">Male</p>
                                 <div class="row" *ngFor="let item of finalCartDetails">
@@ -177,7 +177,7 @@
                                     </div>
                                 </div> -->
                             </div>
-                            <div action="#" class="donation_form">
+                            <div class="donation_form">
                                 <div class="row">
                                     <div class="col-sm-2">
                                         <label for="email" class="text-white">I give</label>
