--- a/src/styles.css
+++ b/src/styles.css
@@ -5649,8 +5649,8 @@ i {
 }
 
 .sidebar a:hover {
-	background-color: white;
-	color: #3398db;
+	background-color: #3398db;
+	color: #ffffff;
 }
 
 .admin-card .card {
